<resources>
    <string name="app_name">MovieApp</string>
    <string name="for_age">13+</string>
    <string name="avengers_film">Avengers: End game</string>
    <string name="genre">Action, Adventure, Fantasy</string>
    <string name="storyline">Storyline</string>
    <string name="cast">Cast</string>
    <string name="reviews">Reviews</string>
    <string name="storyline_full">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="back">Back</string>
    <string name="movie_list">Movie list</string>
</resources>