<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_background"
    >


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/root_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="10dp" />


    <ImageView

        android:id="@+id/image_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/orig"
        app:layout_constraintEnd_toEndOf="@id/root_end"
        app:layout_constraintStart_toStartOf="@id/root_start"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="for_age" />
    <TextView

        android:id="@+id/for_age"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:text="@string/for_age"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/movie_name_text"
        app:layout_constraintEnd_toEndOf="@id/root_end"
        app:layout_constraintStart_toStartOf="@id/root_start"
        app:layout_constraintTop_toTopOf="@id/barrier" />

    <TextView

        android:id="@+id/movie_name_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/avengers_film"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/barrier2"
        app:layout_constraintEnd_toEndOf="@id/root_end"
        app:layout_constraintStart_toStartOf="@id/root_start"
        app:layout_constraintTop_toBottomOf="@id/for_age" />
    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="movie_genre" />

    <TextView
        android:id="@+id/movie_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre"
        android:textColor="@color/genre_color"
        app:layout_constraintBottom_toTopOf="@id/barrier3"
        app:layout_constraintStart_toStartOf="@+id/movie_name_text"
        app:layout_constraintTop_toBottomOf="@+id/barrier2" />

    <ImageView
        android:id="@+id/img_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_star_24"
        app:layout_constraintBottom_toTopOf="@id/barrier3"
        app:layout_constraintEnd_toStartOf="@id/img_2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/movie_genre"
        app:layout_constraintTop_toBottomOf="@id/movie_genre"
        app:tint="@color/genre_color" />

    <ImageView
        android:id="@+id/img_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_star_24"
        app:layout_constraintBottom_toTopOf="@id/barrier3"
        app:layout_constraintEnd_toStartOf="@id/img_3"
        app:layout_constraintStart_toEndOf="@+id/img_1"
        app:layout_constraintTop_toBottomOf="@id/movie_genre"
        app:tint="@color/genre_color" />

    <ImageView
        android:id="@+id/img_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_star_24"
        app:layout_constraintBottom_toTopOf="@id/barrier3"
        app:layout_constraintEnd_toStartOf="@id/img_4"
        app:layout_constraintStart_toEndOf="@+id/img_2"
        app:layout_constraintTop_toBottomOf="@id/movie_genre"
        app:tint="@color/genre_color" />

    <ImageView
        android:id="@+id/img_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_star_24"
        app:layout_constraintBottom_toTopOf="@id/barrier3"
        app:layout_constraintEnd_toStartOf="@id/img_5"
        app:layout_constraintStart_toEndOf="@+id/img_3"
        app:layout_constraintTop_toBottomOf="@id/movie_genre"
        app:tint="@color/genre_color" />

    <ImageView
        android:id="@+id/img_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_star_24"
        app:layout_constraintBottom_toTopOf="@id/barrier3"
        app:layout_constraintEnd_toStartOf="@id/reviews"
        app:layout_constraintStart_toEndOf="@+id/img_4"
        app:layout_constraintTop_toBottomOf="@id/movie_genre"
        app:tint="@color/genre_color" />

    <TextView
        android:id="@+id/reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reviews"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/barrier3"
        app:layout_constraintStart_toEndOf="@+id/img_5"
        app:layout_constraintTop_toBottomOf="@id/movie_genre"

        />
    <androidx.constraintlayout.widget.Barrier

        android:id="@+id/barrier3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="storyline, storyline_full" />

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/storyline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/storyline"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/storyline_full"
        app:layout_constraintStart_toStartOf="@id/root_start"
        app:layout_constraintTop_toBottomOf="@+id/barrier3" />

    <TextView
        android:layout_marginBottom="10dp"
        android:id="@+id/storyline_full"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/storyline_full"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/barrier4"
        app:layout_constraintEnd_toEndOf="@+id/root_end"
        app:layout_constraintStart_toStartOf="@id/storyline"
        app:layout_constraintTop_toBottomOf="@+id/storyline" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="cast" />
    <TextView
        android:id="@+id/cast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cast"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/storyline_full"
        app:layout_constraintTop_toBottomOf="@+id/barrier4" />

    <ImageView
        android:id="@+id/img_actor_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/m1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/img_actor_2"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/cast"
        app:layout_constraintTop_toBottomOf="@id/cast" />

    <ImageView
        android:id="@+id/img_actor_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/m2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/img_actor_3"
        app:layout_constraintStart_toEndOf="@id/img_actor_1"
        app:layout_constraintTop_toBottomOf="@id/cast" />

    <ImageView
        android:id="@+id/img_actor_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/m3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/img_actor_4"
        app:layout_constraintStart_toEndOf="@id/img_actor_2"
        app:layout_constraintTop_toBottomOf="@id/cast" />

    <ImageView
        android:id="@+id/img_actor_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/m4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/root_end"
        app:layout_constraintStart_toEndOf="@id/img_actor_3"
        app:layout_constraintTop_toBottomOf="@id/cast" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/root_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="10dp" />

</androidx.constraintlayout.widget.ConstraintLayout>